--- a/environment.yml
+++ b/environment.yml
@@ -3,46 +3,139 @@ channels:
   - pytorch
   - defaults
 dependencies:
+  - absl-py=1.3.0=py37hecd8cb5_0
+  - aiohttp=3.8.3=py37h6c40b1e_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - appnope=0.1.2=py37hecd8cb5_1001
+  - async-timeout=4.0.2=py37hecd8cb5_0
+  - asynctest=0.13.0=py_0
+  - attrs=22.1.0=py37hecd8cb5_0
+  - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
+  - blinker=1.4=py37hecd8cb5_0
+  - brotli=1.0.9=hca72f7f_7
+  - brotli-bin=1.0.9=hca72f7f_7
+  - brotlipy=0.7.0=py37h9ed2024_1003
+  - bzip2=1.0.8=h1de35cc_0
+  - c-ares=1.18.1=hca72f7f_0
   - ca-certificates=2022.10.11=hecd8cb5_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - cairo=1.14.12=hc4e6be7_4
   - certifi=2022.9.24=py37hecd8cb5_0
+  - cffi=1.15.0=py37hca72f7f_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.0.4=py37hecd8cb5_0
+  - cryptography=38.0.1=py37hf6deb26_0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - dataclasses=0.8=pyh6d0b6a4_7
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - expat=2.4.9=he9d5cce_0
+  - ffmpeg=4.0=h01ea3c9_0
   - flit-core=3.6.0=pyhd3eb1b0_0
+  - fontconfig=2.14.1=hedf32ac_1
+  - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=hd8bbffd_0
+  - frozenlist=1.3.3=py37h6c40b1e_0
+  - gettext=0.21.0=h7535e17_0
   - giflib=5.2.1=haf1e3a3_0
+  - glib=2.63.1=hd977a24_0
+  - google-auth=2.6.0=pyhd3eb1b0_0
+  - google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
+  - graphite2=1.3.14=he9d5cce_1
+  - grpcio=1.42.0=py37ha29bfda_0
+  - harfbuzz=1.8.8=hb8d4a28_0
+  - hdf5=1.10.2=hfa1e0ec_1
+  - icu=58.2=h0a44026_3
+  - idna=3.4=py37hecd8cb5_0
   - intel-openmp=2021.4.0=hecd8cb5_3538
+  - ipython=7.31.1=py37hecd8cb5_1
+  - jasper=2.0.14=h0129ec2_2
+  - jedi=0.18.1=py37hecd8cb5_1
   - jpeg=9e=hca72f7f_0
+  - kiwisolver=1.4.2=py37he9d5cce_0
   - lcms2=2.12=hf1fd2bf_0
   - lerc=3.0=he9d5cce_0
+  - libbrotlicommon=1.0.9=hca72f7f_7
+  - libbrotlidec=1.0.9=hca72f7f_7
+  - libbrotlienc=1.0.9=hca72f7f_7
   - libcxx=14.0.6=h9765a3e_0
   - libdeflate=1.8=h9ed2024_5
   - libedit=3.1.20221030=h6c40b1e_0
   - libffi=3.2.1=h0a44026_1007
+  - libgfortran=3.0.1=h93005f0_2
+  - libiconv=1.16=hca72f7f_2
+  - libopencv=3.4.2=h7c891bd_1
+  - libopus=1.3.1=h1de35cc_0
   - libpng=1.6.37=ha441bb4_0
+  - libprotobuf=3.20.1=h8346a28_0
   - libtiff=4.4.0=h2cd0358_2
+  - libvpx=1.7.0=h378b8a2_0
   - libwebp=1.2.4=h56c3ce4_0
   - libwebp-base=1.2.4=hca72f7f_0
+  - libxml2=2.9.14=hbf8cd5e_0
+  - llvm-openmp=14.0.6=h0dcd299_0
   - lz4-c=1.9.4=hcec6c5f_0
+  - markdown=3.3.4=py37hecd8cb5_0
+  - matplotlib=3.1.2=py37h9aa3819_0
+  - matplotlib-inline=0.1.6=py37hecd8cb5_0
   - mkl=2021.4.0=hecd8cb5_637
   - mkl-service=2.4.0=py37h9ed2024_0
   - mkl_fft=1.3.1=py37h4ab4a9b_0
   - mkl_random=1.2.2=py37hb2f4e1b_0
+  - multidict=6.0.2=py37hca72f7f_0
+  - munkres=1.1.4=py_0
   - ncurses=6.3=hca72f7f_3
   - numpy=1.21.5=py37h2e5f0a9_3
   - numpy-base=1.21.5=py37h3b1a694_3
+  - oauthlib=3.2.1=py37hecd8cb5_0
+  - olefile=0.46=py37_0
+  - opencv=3.4.2=py37h6fd60c2_1
   - openssl=1.1.1s=hca72f7f_0
-  - pillow=9.2.0=py37hde71d04_1
+  - packaging=21.3=pyhd3eb1b0_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pcre=8.45=h23ab428_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=6.1.0=py37hb68e598_0
   - pip=22.3.1=py37hecd8cb5_0
+  - pixman=0.40.0=h9ed2024_1
+  - prompt-toolkit=3.0.20=pyhd3eb1b0_0
+  - protobuf=3.20.1=py37he9d5cce_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - py-opencv=3.4.2=py37h7c891bd_1
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pyasn1-modules=0.2.8=py_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.11.2=pyhd3eb1b0_0
+  - pyjwt=2.4.0=py37hecd8cb5_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyparsing=3.0.9=py37hecd8cb5_0
+  - pysocks=1.7.1=py37hecd8cb5_0
   - python=3.7.3=h359304d_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
   - pytorch=1.13.1=py3.7_0
   - readline=7.0=h1de35cc_5
+  - requests=2.28.1=py37hecd8cb5_0
+  - requests-oauthlib=1.3.0=py_0
+  - rsa=4.7.2=pyhd3eb1b0_1
   - setuptools=65.5.0=py37hecd8cb5_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.33.0=hffcf06c_0
+  - tensorboard=2.9.0=py37hecd8cb5_0
+  - tensorboard-data-server=0.6.1=py37h7242b5c_0
+  - tensorboard-plugin-wit=1.6.0=py_0
   - tk=8.6.12=h5d9f67b_0
   - torchvision=0.2.2=py_3
+  - tornado=6.2=py37hca72f7f_0
+  - traitlets=5.7.1=py37hecd8cb5_0
+  - typing-extensions=4.4.0=py37hecd8cb5_0
   - typing_extensions=4.4.0=py37hecd8cb5_0
+  - urllib3=1.26.13=py37hecd8cb5_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - werkzeug=2.0.3=pyhd3eb1b0_0
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.8=h6c40b1e_0
+  - yarl=1.8.1=py37hca72f7f_0
   - zlib=1.2.13=h4dc903c_0
   - zstd=1.5.2=hcb37349_0
   - pip:
@@ -53,6 +146,7 @@ dependencies:
       - gym-retro==0.8.0
       - importlib-metadata==4.13.0
       - importlib-resources==5.10.1
+      - pygame==2.1.0
       - pyglet==1.5.27
       - zipp==3.11.0
 prefix: /Users/karkisushant/miniconda3/envs/mlrl
